--- a/hypr/startup.conf
+++ b/hypr/startup.conf
@@ -12,3 +12,4 @@ exec-once = waybar
 exec-once = swww-daemon
 exec-once = swww img ~/walls/japan_car.jpg
 exec-once = [workspace 100 silent] firefox
+exec-once = /usr/lib/polkit-kde-authentication-agent-1 
