--- a/hypr/env.conf
+++ b/hypr/env.conf
@@ -13,3 +13,4 @@ env = XCURSOR_THEME, Catppuccin-Mocha-Pink
 env = LIBVA_DRIVER_NAME,nvidia
 env = __GLX_VENDOR_LIBRARY_NAME,nvidia
 env = NVD_BACKEND,direct
+env = YDOTOOL_SOCKET=/tmp/.ydotool_socket
