--- a/hypr/windowrules.conf
+++ b/hypr/windowrules.conf
@@ -24,3 +24,6 @@ windowrulev2 = immediate, class:^(gamescope)$
 
 windowrulev2 = float, class:^(org.pulseaudio.pavucontrol)$
 windowrulev2 = size 1100 500, class:^(org.pulseaudio.pavucontrol)$
+
+windowrulev2 = float, class:^(consteliaxo)$
+windowrulev2 = monitor DP-3, class:^(consteliaxo)$
